kustomize/base/manifests/network-policies/allow-from-same-namespace.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
